[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cgeniepy"
version = "0.14.9"
description = "A Python package to read, analyse and visualise cGENIE Earth System Model output"
license = {text = "GPL-3.0-only"}

[project.optional-dependencies]
extra = ["pangaeapy", "gwspy"]
