[build-system]
requires = ["setuptools==68.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cgeniepy"
version = "0.14.10"
description = "A Python package to read, analyse and visualise cGENIE Earth System Model output"
license = {text = "GPL-3.0-only"}
authors = [{name = "Rui Ying", email = "ying.rui@outlook.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xarray",
    "numpy",
    "pandas",
    "matplotlib",
    "cartopy",
    "netCDF4",
    "scipy",
    "regionmask",
    "geopandas"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
extra = ["pangaeapy", "gwspy"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.nc", "*.csv", "*.txt", "*.xml"]