[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project]
name = "cgeniepy"
version = "0.15.0"
description = "A Python package to read, analyse and visualise cGENIE Earth System Model output"
license = {text = "GPL-3.0-only"}
authors = [{name = "Rui Ying", email = "ying.rui@outlook.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "xarray",
    "numpy",
    "pandas",
    "matplotlib",
    "cartopy",
    "netCDF4",
    "scipy",
    "regionmask",
    "geopandas",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
extra = [
    "pangaeapy>=1.1.0",
    "gwspy"
    ]
docs = [
    "sphinx>=8.1.3",
    "sphinx-gallery>=0.19.0",
    "sphinx-design>=0.6.1",
    "autoapi>=2.0.1",
    "sphinx-autoapi>=3.6.0",
    "pydata-sphinx-theme>=0.16.1",
    "sphinx-gallery>=0.19.0",    
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.nc", "*.csv", "*.txt", "*.xml"]
