[metadata]
name = cgeniepy
version = 0.7.3
author = Rui Ying
author_email = rui.ying@bristol.ac.uk
description = A Python package to read, analyse and visualise cGENIE Earth System Model output
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
* = *.nc, *.csv, *.txt