[metadata]
name = cgeniepy
version = 0.14.3
author = Rui Ying
author_email = ying.rui@outlook.com
description = A Python package to read, analyse and visualise cGENIE Earth System Model output
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
install_requires =
    xarray
    numpy
    pandas
    matplotlib
    cartopy
    netCDF4
    scipy
    regionmask
    geopandas

[options.packages.find]
where = src

[options.package_data]
* = *.nc, *.csv, *.txt, *.xml

[options.extras_require]
extra = pangaeapy

